--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,86 @@
     transform: rotate(360deg);
   }
 }
+
+/* styles.css */
+.App {
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.Todo {
+  background-color: wheat;
+  text-align: center;
+  width: 50%;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: auto;
+}
+
+@media only screen and (max-width:900px)
+{
+  .Todo
+  {
+    width: 95%;
+  }
+}
+
+ul {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+}
+
+button {
+  min-width: 70px;
+  height: 35px;
+  background-color: sandybrown;
+  border: none;
+  font-size: 15px;
+  font-weight: 800;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+}
+
+.input {
+  border: none;
+  width: 340px;
+  height: 35px;
+  border-radius: 9px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.Top {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+
+li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+}
+li[data-status='true']
+{
+  text-decoration: line-through;
+}
+
+li:before {
+  content: "*";
+  margin-right: 5px;
+}
+
+li span{
+  margin-left: 1rem;
+}
+li button:not(:last-child)
+{
+  margin-right: 1rem;
+}
